welcome.lessons.welcome.array.basics.Array2.scala.code

override def run() {
	var T = new Array [Color](getWorldHeight())
	
	if(!estFaceMur){
		avance();
		T(i) = getCouleurSol();
	}else{
		recule();
	}
}